Bug #13571
cron: symbol 'err' has differing types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build error with gcc 10:
ld: warning: symbol 'err' has differing types: (file crontab.o type=OBJT; file /code/illumos-gate/proto/root_i386/lib/libc.so type=FUNC); crontab.o definition taken ld: warning: symbol 'err' has differing types: (file crontab.o type=OBJT; file /code/illumos-gate/proto/root_i386/lib/libc.so type=FUNC); collect2: error: ld returned 1 exit status
Use static scope instead.
Testing done: build/install/boot.
Updated by Electric Monk 13 days ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit f95cbc2e7afaac705bf4c59683cb8a0a88003aa4
commit f95cbc2e7afaac705bf4c59683cb8a0a88003aa4 Author: Toomas Soome <tsoome@me.com> Date: 2021-02-23T19:22:36.000Z 13571 cron: symbol 'err' has differing types Reviewed by: Yuri Pankov <yuripv@yuripv.dev> Reviewed by: C Fraire <cfraire@me.com> Approved by: Dan McDonald <danmcd@joyent.com>