13571 cron: symbol 'err' has differing types Reviewed by: Yuri Pankov <yuripv@yuripv.dev> Reviewed by: C Fraire <cfraire@me.com> Approved by: Dan McDonald <danmcd@joyent.com>